# labro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  entrypoint.sh  labro.example.toml  perspectives.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-dashboard.yml  ci-python.yml  dashboard-dispatch.yml  prune-packages.yml  publish.yml
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/scripts/: copy-wasm.cjs
dashboard/src/: App.tsx  constants.ts  dashboard.css  main.tsx
dashboard/src/components/: BreakdownCharts.tsx  ChartsView.tsx  CostTrendChart.tsx  EngagementChart.tsx  FilterBar.tsx  OutcomeTrendChart.tsx  ProjectStats.tsx  RunDrawer.tsx  RunsTable.tsx  SpeedChart.tsx  TokenTrendChart.tsx
dashboard/src/data/: DataSource.ts  SqlJsDataSource.ts  manifest.ts
dashboard/src/test/: a11y.test.tsx  setup.ts
dashboard/src/utils/: runFormat.ts
docs/: ARCHITECTURE.md  CASE-FOR-SELF-BUILD.md  DASHBOARD.md  DEPLOYMENT.md  IDEAS.md  MODEL-SELECTION.md  OPERATIONS.md  PRD.md  ROADMAP.md  WHY.md
docs/adr/: 0001-toml-config-format.md  0002-github-as-state-store.md  0003-prompt-only-action-permissions-enforcement.md  0003-prompt-only-permitted-action-enforcement.md  0004-sqlite-persistence.md  0005-partial-run-handover.md  0006-multi-provider-agent-registry.md  0007-metrics-dashboard.md
docs/config-repo-scaffold/: dashboard-publish.yml  labro-deploy.yml  labro-restart.yml  labro-update.yml
docs/providers/: README.md  claude-code.md  codex.md  opencode.md
docs/reviews/: 2026-05-31-m5-red-team-review.md
src/labro/: __init__.py  assignee.py  cli.py  github_app.py  logger.py  metrics.py  models.py  picker.py  post_run.py  prompt_builder.py  r2.py  repo.py  runner.py  signals.py  store.py
src/labro/agents/: __init__.py  _schema.py  _subprocess.py  base.py  claude_code.py  codex.py  opencode.py  registry.py
src/labro/config/: __init__.py  loader.py  schema.py
src/labro/task_sources/: __init__.py  base.py  gh_author.py  gh_delegated.py  gh_dependabot_alert.py  gh_label.py  proactive_improvement.py
tests/: conftest.py  test_agent_registry.py  test_agents_claude_code.py  test_assignee.py  test_cli_run.py  test_codex_agent.py  test_collect_signals_cmd.py  test_config.py  test_gen_crontab.py  test_gh_author.py  test_gh_delegated.py  test_gh_dependabot_alert.py  test_gh_label.py  test_github_app.py  test_logger.py  test_opencode_agent.py  test_operator.py  test_picker.py  test_post_run.py  test_proactive_improvement.py  test_prompt_builder.py  test_publish_db.py  test_r2.py  test_repo.py  test_runner.py  test_signals.py  test_store.py
tests/fixtures/: gh_issues_ai_dev.json  gh_issues_ai_dev_with_failed.json  gh_issues_pr.json
