[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labro"
version = "0.1.0"
description = "Self-hosted AI coding-agent harness"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.scripts]
labro = "labro.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
    "types-pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "RUF"]
ignore = [
    "S404",   # import-subprocess — we use subprocess intentionally with shell=False
    "S603",   # subprocess-without-shell-equals-true — correct; we always use list-form
    "S607",   # start-process-with-partial-path — acceptable for `gh` and `claude` CLIs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

# ── mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

# ── bandit ─────────────────────────────────────────────────────────────────────
[tool.bandit]
skips = ["B404", "B603", "B607"]
# B602 (shell=True) is intentionally NOT skipped — hard architectural rule.

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/labro",
    "--cov-report=term-missing",
    "--cov-fail-under=75",  # M2 floor: raised from 70%; runner.py and agents/ remain excluded
]

[tool.coverage.run]
source = ["src/labro"]
omit = [
    "src/labro/agents/*",   # agents/ excluded from coverage floor (M2 scope)
    "src/labro/runner.py",  # runner.py excluded from coverage floor (M2 scope)
]
